# password

./: .gitignore  README.md  index.html  index.html.br  manifest.json  manifest.json.br  package-lock.json  package.json  privacy-policy.html  privacy-policy.html.br  service-worker.js  service-worker.js.br  svelte.config.js  tailwind.config.cjs  terms-of-service.html  terms-of-service.html.br  tsconfig.json
.github/workflows/: chrome-ext.yml  desktop.yml  web.yml
_app/: error.svelte-028e89a1.js  error.svelte-1510c2c6.js  error.svelte-5b8b3755.js  error.svelte-aeebfdaf.js  error.svelte-c9609754.js  error.svelte-f6ef2d49.js  start-43fbaf7b.js  start-48686d0a.js  start-614e7796.js  start-832efdfa.js  start-85246517.js  start-90f15585.js  start-998f4763.js  start-e8bcaef5.js  version.json
_app/chunks/: Layout-9f43be66.js  Modal-4ba55855.js  Modal-76280f12.js  keys-ac9139ce.js  keys-b9524687.js  preload-helper-04e99934.js  vendor-0d9c79e4.js  vendor-265e019b.js  vendor-94822eda.js  vendor-a66a53b1.js  vendor-cf18c955.js  vendor-f23cb189.js  widget-3e963cc8.js
_app/immutable/: manifest.json  start-5aec8290.js
chrome/: .gitignore  README.md  dist.crx  dist.pem  index.html  manifest.json  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
chrome-ext/: package.json  rollup.config.js  tailwind.config.js  tsconfig.json
internal/: version.json  version.json.br
keys/: index.html
privacy-policy/: index.html
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+345 files in other folders)
