[package]
name = "aicacia_password"
version = "0.1.0"
description = "Aicacia Password"
authors = [ "nathanfaucett@gmail.com" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/aicacia/password"
default-run = "aicacia_password"
edition = "2021"
rust-version = "1.56"
build = "build.rs"

[[bin]]
name = "aicacia_password"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
